# datafarmer

./: .env.example  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
datafarmer/: README.md  pyproject.toml
datafarmer/analysis/: __init__.py  preprocessing.py
datafarmer/datafarmer/analysis/: __init__.py  preprocessing.py
datafarmer/datafarmer/cli/: main.py
datafarmer/datafarmer/graph/: __init__.py  distribution.py  relationship.py
datafarmer/datafarmer/io/: __init__.py  bigquery.py  file.py  gdrive.py
datafarmer/datafarmer/llm/: __init__.py  gemini.py
datafarmer/datafarmer/utils/: __init__.py  log.py  parser.py
datafarmer/io/: __init__.py  bigquery.py  file.py  gdrive.py  sheet.py
datafarmer/llm/: __init__.py  anthropic.py  base.py  gemini.py  github_copilot.py  vertex_rag.py
datafarmer/tests/: test_bigquery.py  test_distribution.py  test_file.py  test_gdrive.py  test_gemini.py  test_parser.py  test_preprocessing.py  test_relationship.py
datafarmer/utils/: log.py
docs/: index.md  usage.md
search/: search_index.json
tests/: test_anthropic.py  test_bigquery.py  test_file.py  test_gdrive.py  test_gemini.py  test_github_copilot.py  test_preprocessing.py  test_sheet.py  test_vertex_rag.py
usage/: index.html
