[project]
name = "datafarmer"
version = "2.0.1"
description = "independence of analytical capabilities for all"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.4.2",
    "google-api-python-client>=2.163.0",
    "google-cloud-aiplatform>=1.83.0",
    "pandas>=2.2.3",
    "pandas-gbq>=0.28.0",
    "polars>=1.24.0",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]
