[project]
name = "datafarmer"
version = "2.0.16"
description = "independence of data capabilities for all"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.4.2",
    "google-api-python-client>=2.163.0",
    "google-cloud-aiplatform>=1.83.0",
    "google-genai>=1.31.0",
    "gspread>=6.2.1",
    "pandas>=2.2.3",
    "pandas-gbq>=0.28.0",
    "polars>=1.24.0",
    "pyyaml>=6.0.2",
    "anthropic>=0.50.0",
    "openai>=1.70.0",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "python-dotenv>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "pymdown-extensions>=10.16.1",
    "pytest>=9.0.3",
    "ruff>=0.12.10",
]

[tool.uv]
constraint-dependencies = [
    "urllib3>=2.7.0",
    "cryptography>=46.0.7",
]
