[tool.poetry]
name = "datafarmer"
version = "0.1.5"
description = "this the simple package for a data farmer. wrapping several complex task in to simple"
authors = ["Prasetyo Wianto <prasetyo.wianto@traveloka.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
pytest = "^8.3.3"
pandas = "^2.2.2"
google-cloud-bigquery = "^3.25.0"
db-dtypes = "^1.3.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
